--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.14.0",
     "jspdf": "^3.0.4",
+    "jspdf-autotable": "^5.0.7",
     "next": "16.0.1",
     "react": "19.2.0",
     "react-chartjs-2": "^5.3.1",
