--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-chartjs-2": "^5.3.1",
     "react-dom": "19.2.0",
     "tailwind-merge": "^3.3.1",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "lucide-react": "^0.259.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
